all the problem

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 /AreaofCircle/JavaApplication4/nbproject/private/
 /AreaofCircle/Area/nbproject/private/
 /AreaofCircle/Area/build/
+/New Folder/ProblemFive/nbproject/private/
+/New Folder/ProblemFive/build/
+/ProblemFive/nbproject/private/
+/ProblemFive/build/
+/problemOneandTwo/nbproject/private/
+/problemOneandTwo/build/
+/problemOneandTwo/dist/
+/ProblemSix/nbproject/private/
+/ProblemSix/build/
+/ProblemThree/nbproject/private/
+/ProblemThree/build/
+/Problemtwo/nbproject/private/
