--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /appletTut/nbproject/private/
 /appletTut/build/
 /HW03/PR3_1/nbproject/private/
+/HW03/PR3_2/nbproject/private/
+/CS372Exam/DiceGame/nbproject/private/
+/CS372Exam/DiceGame/build/
